--- a/src/component/PageProduct.css
+++ b/src/component/PageProduct.css
@@ -1,7 +1,7 @@
 .product-detail {
   display: flex;
   gap: 20px;
-  padding: 20px;
+  padding: 2px;
   font-family: Arial, sans-serif;
   
 }
@@ -11,13 +11,17 @@
   text-align: center;
 }
 
-.main-image {
-  width: 100%;
-  max-width: 400px;
-  height: auto;
-  border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-}
+
+  .main-image {
+    width: 400px; /* Cố định chiều rộng */
+    height: 300px; /* Cố định chiều cao */
+    object-fit: contain; /* Đảm bảo hình ảnh giữ tỉ lệ bên trong khung */
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    background-color: #fff; /* Tạo nền xám nhạt để khung hình nổi bật hơn */
+  }
+  
+
 
 .thumbnail-gallery {
   display: flex;
@@ -46,6 +50,7 @@
 
 .product-info {
   flex: 1;
+  margin-right: 50px;
 }
 
 .price-info {
@@ -61,7 +66,7 @@
 }
 
 .color-list {
-  width: 30px;
+  width: 31px;
   height: 30px;
   border-radius: 50%;
 }
@@ -69,14 +74,13 @@
 .buy-button {
   display: inline-block;
   margin-top: 10px;
-  margin-left: 410px;
+  margin-left: 380px;
   padding: 10px 20px;
   color: #fff;
   background-color: #3b3d3f;
   text-decoration: none;
   border-radius: 5px;
   transition: background-color 0.3s;
-  
 }
 
 .buy-button:hover {
@@ -125,4 +129,31 @@
   .accordion.active + .panel {
     display: block;
   }
-  
+  /* Nút tăng giảm số lượng */
+.quantity-control {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+  margin-left: 410px;
+}
+
+.quantity-button {
+  background-color: #3498db;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  margin: 0 5px;
+}
+
+.quantity-button:hover {
+  background-color: #2980b9;
+}
+
+.quantity-display {
+  font-size: 16px;
+  color: #333;
+  margin: 0 10px;
+}
